--- a/Moringa_Data_Science_Core_W3_Independent_Project_Agnes_Mwinzi_DataScience.ipynb
+++ b/Moringa_Data_Science_Core_W3_Independent_Project_Agnes_Mwinzi_DataScience.ipynb
@@ -27,6 +27,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sxlhF0517-UO",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Research Problem\n",
+        "The objective of this project is to investigate a claim about the number of blue cars used in Autolib electric car-sharing service company."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "5krhRCcWPf2P",
